--- a/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
+++ b/internal/projects/bulleit/Interfaces/CreateStampViewController.xib
@@ -444,7 +444,7 @@
 					<object class="IBUIView" id="851464612">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">269</int>
-						<string key="NSFrame">{{0, 361}, {320, 55}}</string>
+						<string key="NSFrame">{{0, 342}, {320, 74}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="573052172"/>
@@ -455,7 +455,7 @@
 					<object class="IBUIButton" id="573052172">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{112, 368}, {95, 41}}</string>
+						<string key="NSFrame">{{112, 350}, {95, 41}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="20863377"/>
@@ -471,7 +471,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIReversesTitleShadowWhenHighlighted">YES</bool>
-						<string key="IBUITitleShadowOffset">{0, -1}</string>
+						<string key="IBUITitleShadowOffset">{0, -0.5}</string>
 						<string key="IBUINormalTitle">Stamp it</string>
 						<reference key="IBUIHighlightedTitleColor" ref="935530847"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
@@ -480,7 +480,7 @@
 						</object>
 						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
+							<bytes key="NSWhite">MC4zAA</bytes>
 						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
@@ -490,7 +490,7 @@
 					<object class="IBUIActivityIndicatorView" id="20863377">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">-2147483380</int>
-						<string key="NSFrame">{{150, 380}, {20, 20}}</string>
+						<string key="NSFrame">{{150, 362}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -1163,6 +1163,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CreateStampViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">STCreditTextField</string>
+					<string key="superclassName">UITextField</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STCreditTextField.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
