--- a/internal/projects/bulleit/Interfaces/SearchEntitiesViewController.xib
+++ b/internal/projects/bulleit/Interfaces/SearchEntitiesViewController.xib
@@ -14,8 +14,9 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<string>IBUIView</string>
 			<string>IBUIImageView</string>
-			<string>IBProxyObject</string>
 			<string>IBUILabel</string>
+			<string>IBProxyObject</string>
+			<string>IBUIActivityIndicatorView</string>
 			<string>IBUITextField</string>
 			<string>IBUITableView</string>
 			<string>IBUIButton</string>
@@ -109,7 +110,7 @@
 								<string key="NSFrame">{{257, 6}, {57, 31}}</string>
 								<reference key="NSSuperview" ref="709319091"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="34014976"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="1066096501">
 									<int key="NSColorSpace">3</int>
@@ -177,6 +178,63 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
+					<object class="IBUIView" id="34014976">
+						<reference key="NSNextResponder" ref="873029372"/>
+						<int key="NSvFlags">-2147483356</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIActivityIndicatorView" id="655957462">
+								<reference key="NSNextResponder" ref="34014976"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{9, 22}, {20, 20}}</string>
+								<reference key="NSSuperview" ref="34014976"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="401380882"/>
+								<string key="NSReuseIdentifierKey">_NS:824</string>
+								<reference key="IBUIBackgroundColor" ref="1066096501"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<bool key="IBUIHidesWhenStopped">NO</bool>
+								<bool key="IBUIAnimating">YES</bool>
+								<int key="IBUIStyle">2</int>
+							</object>
+							<object class="IBUILabel" id="401380882">
+								<reference key="NSNextResponder" ref="34014976"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{38, 21}, {262, 21}}</string>
+								<reference key="NSSuperview" ref="34014976"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
+								<string key="NSReuseIdentifierKey">_NS:311</string>
+								<reference key="IBUIBackgroundColor" ref="1066096501"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Searching...</string>
+								<object class="NSFont" key="IBUIFont" id="647823557">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">14</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC40AA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">14</float>
+							</object>
+						</object>
+						<string key="NSFrame">{{0, 397}, {320, 63}}</string>
+						<reference key="NSSuperview" ref="873029372"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="655957462"/>
+						<string key="NSReuseIdentifierKey">_NS:180</string>
+						<reference key="IBUIBackgroundColor" ref="1066096501"/>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
@@ -198,9 +256,10 @@
 				<float key="IBUISectionHeaderHeight">22</float>
 				<float key="IBUISectionFooterHeight">22</float>
 				<reference key="IBUITableHeaderView" ref="709319091"/>
+				<reference key="IBUITableFooterView" ref="34014976"/>
 			</object>
 			<object class="IBUIView" id="434293006">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -209,7 +268,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{11, 24}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="434293006"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="761786745"/>
 						<string key="NSReuseIdentifierKey">_NS:541</string>
 						<int key="IBUIContentMode">4</int>
@@ -229,8 +287,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{38, 29}, {267, 21}}</string>
 						<reference key="NSSuperview" ref="434293006"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<reference key="IBUIBackgroundColor" ref="1066096501"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -253,7 +309,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{38, 12}, {267, 21}}</string>
 						<reference key="NSSuperview" ref="434293006"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="739562935"/>
 						<string key="NSReuseIdentifierKey">_NS:311</string>
 						<reference key="IBUIBackgroundColor" ref="1066096501"/>
@@ -263,11 +318,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Can't find "blah"?</string>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">14</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFont" ref="647823557"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4yMTU2ODYyNzQ1IDAuNDc4NDMxMzcyNSAwLjg1MDk4MDM5MjIAA</bytes>
@@ -278,8 +329,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 63}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="953935145"/>
 				<string key="NSReuseIdentifierKey">_NS:180</string>
 				<reference key="IBUIBackgroundColor" ref="1066096501"/>
@@ -362,6 +411,14 @@
 					</object>
 					<int key="connectionID">44</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">searchingIndicatorView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="34014976"/>
+					</object>
+					<int key="connectionID">50</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -389,38 +446,9 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="709319091"/>
+							<reference ref="34014976"/>
 						</object>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">29</int>
-						<reference key="object" ref="709319091"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="672323501"/>
-							<reference ref="780588220"/>
-							<reference ref="701797646"/>
-							<reference ref="459194021"/>
-						</object>
-						<reference key="parent" ref="873029372"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">30</int>
-						<reference key="object" ref="672323501"/>
-						<reference key="parent" ref="709319091"/>
-						<string key="objectName">Shelf Background</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">31</int>
-						<reference key="object" ref="780588220"/>
-						<reference key="parent" ref="709319091"/>
-						<string key="objectName">Search Text Field</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">32</int>
-						<reference key="object" ref="701797646"/>
-						<reference key="parent" ref="709319091"/>
-						<string key="objectName">Cancel Button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">39</int>
@@ -450,9 +478,61 @@
 						<reference key="parent" ref="434293006"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">29</int>
+						<reference key="object" ref="709319091"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="672323501"/>
+							<reference ref="780588220"/>
+							<reference ref="701797646"/>
+							<reference ref="459194021"/>
+						</object>
+						<reference key="parent" ref="873029372"/>
+						<string key="objectName">View</string>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
 						<reference key="object" ref="459194021"/>
 						<reference key="parent" ref="709319091"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="701797646"/>
+						<reference key="parent" ref="709319091"/>
+						<string key="objectName">Cancel Button</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="780588220"/>
+						<reference key="parent" ref="709319091"/>
+						<string key="objectName">Search Text Field</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">30</int>
+						<reference key="object" ref="672323501"/>
+						<reference key="parent" ref="709319091"/>
+						<string key="objectName">Shelf Background</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">47</int>
+						<reference key="object" ref="34014976"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="655957462"/>
+							<reference ref="401380882"/>
+						</object>
+						<reference key="parent" ref="873029372"/>
+						<string key="objectName">Searching View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">48</int>
+						<reference key="object" ref="655957462"/>
+						<reference key="parent" ref="34014976"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">49</int>
+						<reference key="object" ref="401380882"/>
+						<reference key="parent" ref="34014976"/>
 					</object>
 				</object>
 			</object>
@@ -477,6 +557,9 @@
 					<string>41.IBPluginDependency</string>
 					<string>42.IBPluginDependency</string>
 					<string>45.IBPluginDependency</string>
+					<string>47.IBPluginDependency</string>
+					<string>48.IBPluginDependency</string>
+					<string>49.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -497,6 +580,9 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -511,7 +597,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">45</int>
+			<int key="maxID">50</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -546,6 +632,7 @@
 							<string>addStampLabel</string>
 							<string>cancelButton</string>
 							<string>searchField</string>
+							<string>searchingIndicatorView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -553,6 +640,7 @@
 							<string>UILabel</string>
 							<string>UIButton</string>
 							<string>STSearchField</string>
+							<string>UIView</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -563,6 +651,7 @@
 							<string>addStampLabel</string>
 							<string>cancelButton</string>
 							<string>searchField</string>
+							<string>searchingIndicatorView</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -581,6 +670,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">searchField</string>
 								<string key="candidateClassName">STSearchField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">searchingIndicatorView</string>
+								<string key="candidateClassName">UIView</string>
 							</object>
 						</object>
 					</object>
