--- a/internal/projects/bulleit/Interfaces/CollapsiblePreviewController.xib
+++ b/internal/projects/bulleit/Interfaces/CollapsiblePreviewController.xib
@@ -203,6 +203,7 @@
 								<string key="NSFrame">{{15, 0}, {36, 40}}</string>
 								<reference key="NSSuperview" ref="370311607"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -239,6 +240,7 @@
 							<reference key="NSCustomColorSpace" ref="934515069"/>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</object>
